--- a/progrenh.css
+++ b/progrenh.css
@@ -2,6 +2,21 @@
     font-family: 'Times New Roman', Times, serif;
 }
 
+body {
+    width: 90%;
+    background: no-repeat center;
+
+}
+#zen {
+    position: relative;
+    opacity: 0.18;
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;
+    
+
+}
 a:link {
     color: red;
 }
@@ -9,10 +24,22 @@ a:visited {
     color:lightcoral;
 }
 
+blockquote {
+    width: 50%;
+    margin-left: 27.333%;
+    display: inline-block;
+    font-size: 160%;
+    background-color: lightgray;
+    border-radius: 10px;
+    padding: 14px 30px;
+    border-left: solid 3px #CB4154;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
 a:link, a:visited {
     border-radius: 5px;
     background-color: rebeccapurple;
-    color: tomato;
+    color:#F3F781;
     padding: 14px 5px;
     text-align: center; 
     text-decoration: none;
